Add design right container

--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
                 <p class="leftText">You scored higher than 65% of the people who have taken these tests.</p>
             </div>
         </div>
-        <div class="rightContainer"></div>
+        <div class="rightContainer">
+            <p class="tittleRight">Summary</p>
+            <div class="reaction"></div>
+            <div class="memory"></div>
+            <div class="verbal"></div>
+            <div class="visual"></div>
+
+            <button class="buttonContinue" type="submit">Continue</button>
+        </div>
     </div>
 </body>
 </html>
