Design desktop finish

--- a/index.html
+++ b/index.html
@@ -22,10 +22,46 @@
         </div>
         <div class="rightContainer">
             <p class="tittleRight">Summary</p>
-            <div class="reaction"></div>
-            <div class="memory"></div>
-            <div class="verbal"></div>
-            <div class="visual"></div>
+            <div class="reaction">
+                <div class="leftDivCategory">
+                    <img src="./assets/images/icon-reaction.svg" alt="icon_reaction">
+                    <p class="textReaction">Reaction</p>
+                </div>
+                <div class="rightDivCategory">
+                    <p class="score">80</p>
+                    <p class="total">/100</p>
+                </div>
+            </div>
+            <div class="memory">
+                <div class="leftDivCategory">
+                    <img src="./assets/images/icon-memory.svg" alt="icon_memory">
+                    <p class="textMemory">Memory</p>
+                </div>
+                <div class="rightDivCategory">
+                    <p class="score">92</p>
+                    <p class="total">/100</p>
+                </div>
+            </div>
+            <div class="verbal">
+                <div class="leftDivCategory">
+                    <img src="./assets/images/icon-verbal.svg" alt="icon_verbal">
+                    <p class="textVerbal">Verbal</p>
+                </div>
+                <div class="rightDivCategory">
+                    <p class="score">61</p>
+                    <p class="total">/100</p>
+                </div>
+            </div>
+            <div class="visual">
+                <div class="leftDivCategory">
+                    <img src="./assets/images/icon-visual.svg" alt="icon_visual">
+                    <p class="textVisual">Visual</p>
+                </div>
+                <div class="rightDivCategory">
+                    <p class="score">72</p>
+                    <p class="total">/100</p>
+                </div>
+            </div>
 
             <button class="buttonContinue" type="submit">Continue</button>
         </div>
